<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:padding="@dimen/dimen_4dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/dimen_image"
        android:layout_height="@dimen/dimen_image"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/LNtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_toRightOf="@+id/img"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_sp" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/code_sp"
            android:textColor="@color/color_text_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/price_sp"
            android:textColor="@color/color_text_sp" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_sp" />
    </LinearLayout>


</RelativeLayout>