<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".Login.activity.LoginActivity">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white"
        android:padding="@dimen/dimen_8dp"
        android:src="@mipmap/namishop_foreground" />
    <android.support.design.widget.TextInputLayout

        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_below="@+id/imglogo"
        android:id="@+id/ed_taikhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp"
        android:textColorHint="@android:color/white"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:text="admin"
            android:id="@+id/ed_user"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/text_size_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_below="@+id/ed_taikhoan"
        android:id="@+id/edmatkhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp"
        android:textColorHint="@android:color/white"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText

            android:id="@+id/ed_password"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/text_size_login"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/edmatkhau"
        android:id="@+id/Tipmatkhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp"
        android:textColorHint="@android:color/white"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:text="hosco"
            android:id="@+id/ed_code"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/text_size_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tenantcode"
            android:inputType="text"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/Tipmatkhau"
        android:textColor="@color/bg_login"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textAllCaps="false" />



    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/dangki"
        android:layout_below="@+id/btnLogin"
        android:layout_margin="@dimen/dimen_8dp"
        android:textColor="@color/bg_dangki"
        android:layout_gravity="center"
        android:text="@string/dangki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/hotro"
        android:layout_above="@+id/phonehotro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/hotro"
        android:textColor="@android:color/white"
        android:textSize="18dp" />
    <TextView
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:id="@+id/phonehotro"
        android:layout_centerHorizontal="true"
       android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_settings_phone_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/phonehotro"
        android:textColor="@android:color/white"
        android:textSize="15dp" />
</RelativeLayout>